[gd_scene load_steps=3 format=3 uid="uid://o1sn2urfba0x"]

[ext_resource type="Script" uid="uid://cmshfmmm0xvt0" path="res://scripts/hud.gd" id="1_37p78"]
[ext_resource type="FontFile" uid="uid://dkg83txrptyte" path="res://assets/fonts/Michroma-Regular.ttf" id="2_oo0fn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="SpaceBlaster" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.223529, 1, 0.0784314, 1)
theme_override_colors/font_shadow_color = Color(0.32549, 0.203922, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_fonts/font = ExtResource("2_oo0fn")
theme_override_font_sizes/font_size = 80
text = "Space Blaster!"

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -257.0
offset_top = -99.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 74
text = "Score: 0"

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -102.0
offset_right = 319.0
grow_vertical = 0
theme_override_font_sizes/font_size = 74
text = "Health: 3"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 152.0
offset_right = 202.0
offset_bottom = 254.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 74
text = "Game Over"

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="MenuButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Menu"

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="MenuButton" to="." method="_on_menu_button_button_down"]
